--- a/worblehat-web/src/main/resources/templates/home.html
+++ b/worblehat-web/src/main/resources/templates/home.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 <h1 id="welcome_heading"><span th:text="${@environment.getProperty('spring.application.name')}"></span></h1>
-
+Hello World !
 <ul>
     <li><a th:href="@{/bookList}">Show all Books</a></li>
     <li><a th:href="@{/insertBooks}">Add a new book</a></li>
