--- a/worblehat-web/src/main/resources/templates/home.html
+++ b/worblehat-web/src/main/resources/templates/home.html
@@ -11,5 +11,6 @@
     <li><a th:href="@{/borrow}">Borrow Book</a></li>
     <li><a th:href="@{/returnAllBooks}">Return all Books</a></li>
 </ul>
+<span th:text="${@environment.getProperty('info.app.version')}"></span>
 </body>
 </html>
