WEB-111 Textarea Cols-Attribute geändert

--- a/worblehat-web/src/main/resources/templates/insertBooks.html
+++ b/worblehat-web/src/main/resources/templates/insertBooks.html
@@ -23,7 +23,7 @@
 		<br />
 		Description:
 		<br />
-		<textarea rows="4" cola="50" th:field="*{description}"></textarea>
+		<textarea rows="4" cols="50" th:field="*{description}"></textarea>
 		<br />
 		<input type="submit" id="addBook" value="Add Book" />
 		<hr/>
